# SweetShell

./: CMakeLists.txt  readme.md  swsh
src/: main.cpp  swsh.cpp
src/Preset/: Preset.cpp  Preset.hpp
src/Project_data/: Project_data.hpp
src/Signal/: Signal.hpp
src/SweetShell_UI/: Button.cpp  Button.hpp  swsh_ui.cpp  swsh_ui.hpp
src/SweetShell_database/: SweetShell_database.cpp  SweetShell_database.hpp
src/SweetShell_unit/: SweetShell_unit.cpp  SweetShell_unit.hpp
src/TerminalInstance/: TerminalInstance.hpp
src/Util/: safe_access.hpp
